test/driver/sema_error_retcode.dmz
// RUN: dmz %s -run 2>&1 | filecheck %s
fn main() -> semaError {}
// CHECK: error: function 'main' has invalid 'semaError' return type
